Add profile_scores_by_users
